--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/devtools-integration": "^0.2.1",
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.6",
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
     "argon2": "^0.44.0",
