--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,8 @@ services:
       POSTGRES_DB: linkshortener
     ports:
       - "5432:5432"
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
