--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "argon2": "^0.44.0",
     "express-formidable": "^1.2.0",
     "express-session": "^1.19.0",
+    "ioredis": "^5.9.3",
     "nestjs-zod": "^5.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
